--- a/ASMR Simulator/Packages/manifest.json
+++ b/ASMR Simulator/Packages/manifest.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "2.10.2",
+    "com.unity.demoteam.hair": "https://github.com/Unity-Technologies/com.unity.demoteam.hair.git",
     "com.unity.feature.development": "1.0.1",
     "com.unity.feature.vr": "1.0.0",
+    "com.unity.formats.alembic": "2.3.4",
     "com.unity.inputsystem": "1.14.0",
     "com.unity.learn.iet-framework": "4.0.4",
     "com.unity.localization": "1.5.3",
